RESOLVED FIXED 273891
REGRESSION (278263@main): [UnifiedPDF] Using Find-in-page results in stuck text selections
https://bugs.webkit.org/show_bug.cgi?id=273891
Summary REGRESSION (278263@main): [UnifiedPDF] Using Find-in-page results in stuck te...
Abrar Rahman Protyasha
Reported 2024-05-08 12:50:14 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2024-05-08 12:57:13 PDT
EWS
Comment 2 2024-05-08 14:41:32 PDT
Committed 278529@main (77eafb20baed): <https://commits.webkit.org/278529@main> Reviewed commits have been landed. Closing PR #28303 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.