REGRESSION (278263@main): [UnifiedPDF] Using Find-in-page results in stuck text selections https://bugs.webkit.org/show_bug.cgi?id=273891 rdar://127678373

Reviewed by Sammy Gill.

We gate our interactions with the selection layer behind a selector
check for `enumerateRectsAndTransformsForPage:usingBlock:` on the current
selection. When the current selection gets nulled, because, say,
Find-in-page is dismissed, canPaintSelectionIntoOwnedLayer() returns
false. This causes the selection rect invalidation to target the content
layer and not the selection layer.

This means that since 278263@main, we’ve been getting a hodgepodge of
painting selection rects on both the content layer and the selection
layer, which is clearly incorrect.

The fix here is to not perform the selector check on the current
selection, but instead to perform an instancesRespondToSelector check on
the PDFSelection class itself, since all we care about is the runtime
availability of the `enumreateRectsAndTransformsForPage:usingBlock:` API.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::canPaintSelectionIntoOwnedLayer const):

Canonical link: https://commits.webkit.org/278529@main